radarr/radarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f dockercompose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: radarr
  name: radarr
spec:
  ports:
    - name: "7878"
      port: 7878
      targetPort: 7878
  selector:
    io.kompose.service: radarr
status:
  loadBalancer: {}
