radarr/radarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: radarr

spec:
  rules:
    - host: radarr.haijin666.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  radarr
                port:
                  number: 7878
